<resources>
    <string name="app_name">DecisionHelper</string>
    <string name="login_welcome_tv_welcometext">Welcome to \n Decide With Me!</string>
    <string name="welcome_detail_text">
        Make tough decisions the easy way, and share them with the people who matter most.</string>
    <string name="login">login</string>
    <string name="help">help</string>
    <string name="login_welcome_btn_signuptext">sign up</string>
    <string name="decision_helper">DH</string>
    <string name="personality_quiz">PQ</string>
    <string name="settings">S</string>
    <string name="btn_back">back</string>
    <string name="btn_OK">OK</string>
    <string name="btn_cancel">Cancel</string>

    <!-- help strings-->
    <string name="h_homepage_titlebartext">Help</string>
    <string name="h_homepage_btn_DHfaqtext">Decision Helper FAQ</string>
    <string name="h_homepage_btn_PQfaqtext">Personality Quiz FAQ</string>

    <!-- decision helper strings -->
    <string name="dh_addchoices_btn_newchoicetext">+ new choice</string>
    <string name="dh_add_choices_titlebar">My Choices</string>
    <string name="dh_add_choices_hint">For each item that you are deciding between, click it to apply values for each factor.</string>
    <string name="dh_add_factors_tv_titlebartext">Add Factors</string>
    <string name="dh_add_factors__btn_newfactortext">+ add new</string>
    <string name="dh_add_possibility_tv_titlebartext">Add possibilities</string>
    <string name="dh_add_possibility_btn_newpostext">+ New Possibility</string>
    <string name="dh_button">Dummy Factor</string>
    <string name="dh_list_rankvalues_titlebar">Rank Choice Values</string>
    <string name="dh_list_rankvalues_instructions">Click on each factor below to rank their values from worst to best.</string>
    <string name="dh_decision">Dummy Decision</string>
    <string name="dh_add_value_titlebar">Add values</string>
    <string name="dh_decision_menu_titlebar">Decision Menu</string>
    <string name="dh_add_values_btn_newpostext">+ New Value</string>
    <string name="dh_decision_menu_btn_addrmfactorstext">Add Factors</string>
    <string name="dh_decision_menu_btn_ranktext">Rank Factors</string>
    <string name="dh_decision_menu_btn_addrmchoicestext">Add Choices</string>
    <string name="dh_decision_menu_btn_resulttext">View Result</string>
    <string name="dh_decision_menu_btn_sharetext">Share</string>
    <string name="dh_decision_menu_btn_rankchoicestext">Rank Choice Values</string>
    <string name="dh_factors_dropdown_titlebar">Apply Values to Factor</string>
    <string name="dh_factors_dropdown_hint">For each factor, choose a value from the dropdown list to apply to your choice.</string>
    <string name="dh_factors_dropdown_label">apply factors drop down</string>
    <string name="dh_addfactors_textinput_directions">For this choice, type the values corresponding to each factor. They can be
    numeric or descriptive.</string>
    <string name="dh_addfactors_textinput_titlebar">Add Values to Choice</string>
    <string name="dh_addfactors_textinput_et_hint">50k, worst, favorite...</string>
    <string name="dh_addfactors_textinput_btn_new">Add New</string>
    <string name="dh_result_congrats">Congratualions! According to your preferences and our calculations, you should choose:</string>
    <string name="dh_result_score">with a score of:</string>
    <string name="dh_friend_1">Friend 1</string>
    <string name="dh_friend_2">Friend 2</string>
    <string name="dh_friend_3">Friend 3</string>
    <string name="dh_homepage_btn_newdecisiontext">New Decision</string>
    <string name="dh_homepage_tv_mydecisionstext">My Decisions:</string>
    <string name="dh_homepage_tv_sharedwithme">Shared with me:</string>
    <string name="dh_homepage_titlebar">Decision Helper Home</string>
    <string name="dh_homepage_dialog_tv_new">What would you like to make a decision on?</string>
    <string name="dh_homepage_dialog_et_hint">Should I buy a used or new car?</string>
    <string name="dh_invite">Invite Friends</string>
    <string name="dh_invite_from_contacts">Invite From Contacts</string>
    <string name="dh_rank_factors_tv_titlebartext">Rank Factors</string>
    <string name="dh_rank_values_tv_title">Rank Values</string>
    <string name="dh_rank_values_instructions">For the value worth the least to you,
        score it a 0. For the value worth the most, rank it the full scale. For intermediate values,
        score them compared to the worst and best. </string>
    <string name="dh_rank_values_range_0">0</string>
    <string name="dh_rank_values_range_100">100</string>
    <string name="dh_new_choice">new choice</string>
    <string name="dh_next">Next</string>
    <string name="dh_select">Select what you like to share</string>
    <string name="dh_select_all_factors">Select All Factors</string>
    <string name="dh_share_select_who">Who would you like to share this decision with?</string>
    <string name="dh_share_nofriends">Friends not listed? Invite them!</string>
    <string name="dh_share_myfriends">My Decision Helper Friends:</string>
    <string name="dh_send">Send</string>
    <string name="dh_share_review">Share Review</string>
    <string name="dh_share_review_to">To:</string>
    <string name="dh_share_review_what">What:</string>
    <string name="dh_addfactor_dialog_tv_new">Enter a new factor, or something that would affect your decision.</string>
    <string name="dh_addfactor_dialog_et_hint">Salary, benefits, monthly cost&#8230;</string>
    <string name="dh_addchoice_dialog_tv_new">What are you deciding between? Add one choice.</string>
    <string name="dh_addchoice_dialog_et_hint">Job #1, Job #2&#8230;</string>
    <string name="dh_addvalue_dialog_tv_new">Add a new value for the selected factor.</string>
    <string name="dh_addvalue_dialog_et_hint">100k, far from home, etc</string>
    <string name="login_welcome_btn_logintext">Log In</string>
    <string name="login_signupconfirmation_tv_result_successtext1">Registered Account Successfully!</string>
    <string name="login_signupconfirmation_tv_result_successtext2">Your email has been added to our list.</string>
    <string name="login_login_et_usernametext">Enter User Account</string>
    <string name="login_login_et_passwordtext">Enter PassWord</string>
    <string name="login_login_btn_logintext">Log In</string>
    <string name="login_signupconfirmation_btn_backtext">Go back to app</string>
    <string name="login_signup_btn_logintext">Enter your email here</string>
    <string name="login_signup_btn_signuptext">Sign Up</string>

    <!-- dummy string placeholders -->
    <string name="dh_dummy_decision">Dummy Decision</string>
    <string name="dh_dummy_factor">Dummy Factor</string>
    <string name="dh_dummy_value">Dummy Value</string>

    <!-- Strings related to choice drop down (dummy) -->
    <string name="drop_down_prompt">Apply a possibility</string>
    <string-array name="salary_array">
        <item>Salary 1: 100k</item>
        <item>Salary 2: 85k</item>
        <item>Salary 3: 80K</item>
    </string-array>
    <string-array name="location_array">
        <item>Chicago</item>
        <item>Washington D.C.</item>
        <item>San Francisco</item>
    </string-array>
    <string-array name="benefits_array">
        <item>Best</item>
        <item>Worst</item>
        <item>In-Between</item>
    </string-array>
    <string name="dh_addchoices_btn_dummychoice1text">Dummy Choice</string>
    <string name="dh_addchoices_btn_dummychoice2text">Dummy Choice</string>
    <string name="dh_factors_dropdown_btn_dummychoice1text">Dummy Choice</string>


    <!-- personality quiz strings -->
    <string-array name="pq_questions_array">
        <item>I am willing to take a chance at failure for the sake of innovation.</item>
        <item>I would take a risk if there were something in it for me.</item>
        <item>Before making a decision, I fail to anticipate the factors that could influence the outcome.</item>
        <item>I don\’t typically check important projects carefully for mistakes before submitting them.</item>
        <item>I don\’t worry that something unexpected might ruin all my plans</item>
        <item>I realize that past actions were more dangerous than I thought at the time.</item>
        <item>I don\'t mind working on projects at work that could fail.</item>
        <item>It bores me to know in advance what will happen at work.</item>
        <item>If I take a risk and fail, I can handle the consequences.</item>
        <item>Chance has a lot to do with being successful.</item>
    </string-array>
    <string name="pq_strongly_agree">Strongly Agree</string>
    <string name="pq_neutral">Neutral</string>

    <string name="pq_strongly_disagree">Strongly Disagree</string>

    <string name="pq_risk_neutral_response">Your results indicate that you\’re neutral when it comes to
        risky decisions.
 If you\’re unsure about something, maybe you should re-evaluate; but then again,
        if you feel like taking a risk,
 go for it! </string>
    
<string name="pq_risk_averse_response">Your behavior leans towards risk-averse, meaning you prefer a

        sure outcome over a gamble. When making your decision, be sure to evaluate how risky each option

        is and add risk as a factor! </string>

    <string name="pq_risk_seeking_response">You are a risk-seeker! You enjoy the thrill of a gamble when

        considering multiple options. When making your decision, don\’t let the fear of the unknown stop you!</string>
    <string name="pq_homepage_btn_startquiztext">START QUIZ NOW!</string>
    <string name="pq_titlebar">Personality Quiz</string>
    <string name="pq_questions_tv_numberdisplaytext">"0/0"</string>
    <string name="pq_questions_tv_questiontext">Herpaderp durp? derpyderp?</string>
    <string name="pq_previous_text">Previous</string>
    <string name="pq_next_text">Next</string>
    <string name="pq_start_text">Start</string>
    <string name="pq_results_result">Personality Quiz Result:</string>
    <string name="pq_homepage_detail_text">Take a quick quiz to see what your risk preferences are when it comes to making big decisions!</string>
    <string name="pq_why_take_quiz">Why should you take the Personality Quiz?</string>
    <string name="pq_why_reasons">Here are 3 important reasons: \n 1. It can help inform your decision .\n 2. It will identify
        your risk preferences. \n 3. It feels good to know yourself. \n \n Happy Quizzing!</string>
    <!--Strings related to settings-->
    <string name="s_homepage_tv_titlebartext">Settings</string>
    <string name="s_homepage_btn_editprofiletext">Edit Profile</string>
    <string name="s_homepage_btn_managesharingtext">Manage Sharing</string>
    <string name="s_homepage_btn_changeemailtext">Change Email</string>
    <string name="s_homepage_changepasswordtext">Change Password</string>
    <string name="s_homepage_resetdatatext">Reset DB</string>

    <!--Strings related to hamburgers-->
    <string-array name="hamburgers_array">
        <item>Decision Helper</item>
        <item>Personality Quiz</item>
        <item>Settings</item>
        <item>Help</item>
    </string-array>

</resources>
