<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:weightSum="1">


    <TextView
        android:text="@string/dh_invite_from_contacts"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:textSize="19sp"
        android:layout_marginTop="10dp"
        android:id="@+id/textView4" />

    <RadioButton
        android:text="@string/dh_friend_1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/radioButton6" />

    <RadioButton
        android:text="@string/dh_friend_2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/radioButton7" />

    <RadioButton
        android:text="@string/dh_friend_3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/radioButton8" />

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center"
        android:layout_marginTop="40dp">
        <Button
            android:id="@+id/dh_share_invite_friend_btn_back"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/btn_back"
            android:layout_gravity="center_horizontal"
            android:onClick="dh_share_invite_friend_btn_backOnClick"/>

        <Button
            android:id="@+id/dh_share_invite_friend_btn_next"
            android:text="@string/dh_next"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="100dp"
            android:onClick="dh_share_invite_friend_btn_nextOnClick"/>
    </LinearLayout>
</LinearLayout>