<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:weightSum="1"
    android:orientation="vertical"
    android:id="@+id/dh_decision_menu_buttons">

    <Button
        android:id="@+id/dh_decision_menu_btn_addfactors"
        android:text="@string/dh_decision_menu_btn_addrmfactorstext"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="0.10"
        android:onClick="dh_decision_menu_btn_addfactorsOnClick" />

    <Button
        android:id="@+id/dh_decision_menu_btn_rank"
        android:text="@string/dh_decision_menu_btn_ranktext"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="0.09"
        android:onClick="dh_decision_menu_btn_rankOnClick"
        android:enabled="false"/>

    <Button
        android:id="@+id/dh_decision_menu_btn_addchoices"
        android:text="@string/dh_decision_menu_btn_addrmchoicestext"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="0.09"
        android:onClick="dh_decision_menu_btn_addchoicesOnClick"
        android:enabled="false"/>

    <Button
        android:id="@+id/dh_decision_menu_btn_rankchoices"
        android:text="@string/dh_decision_menu_btn_rankchoicestext"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="0.09"
        android:onClick="dh_decision_menu_btn_rankchoicesOnClick"
        android:enabled="false"/>

    <Button
        android:id="@+id/dh_decision_menu_btn_result"
        android:text="@string/dh_decision_menu_btn_resulttext"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="0.09"
        android:onClick="dh_decision_menu_btn_resultOnClick"
        android:enabled="false"/>

    <Button
        android:id="@+id/dh_decision_menu_btn_share"
        android:text="@string/dh_decision_menu_btn_sharetext"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="0.09"
        android:onClick="dh_decision_menu_btn_shareOnClick"
        android:enabled="false" />

    <Button
        android:id="@+id/dh_decision_menu_btn_back"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btn_back"
        android:layout_marginTop="60dp"
        android:layout_gravity="center_horizontal"
        android:onClick="dh_decision_menu_btn_backOnClick"/>

</LinearLayout>