<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginRight="16dp"
    android:layout_marginLeft="16dp">



    <Button
        android:id="@+id/s_homepage_btn_editprofile"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/s_homepage_btn_editprofiletext"
        android:layout_marginTop="16dp"
        android:textSize="20sp"/>
    <Button
        android:id="@+id/s_homepage_btn_managesharing"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/s_homepage_btn_managesharingtext"
        android:layout_marginTop="16dp"
        android:textSize="20sp"/>
    <Button
        android:id="@+id/s_homepage_btn_changeemail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/s_homepage_btn_changeemailtext"
        android:layout_marginTop="16dp"
        android:textSize="20sp"/>
    <Button
        android:id="@+id/s_homepage_btn_changepassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/s_homepage_changepasswordtext"
        android:layout_marginTop="16dp"
        android:textSize="20sp"/>
    <Button
        android:id="@+id/s_homepage_btn_resetdata"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/s_homepage_resetdatatext"
        android:layout_marginTop="16dp"
        android:textSize="20sp"
        android:onClick="resetDB"/>



</LinearLayout>