<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:weightSum="1">
    <android.support.v7.widget.Toolbar
        android:id="@+id/dh_share_choose_receivers_ab"
        android:background="?attr/colorPrimary"
        android:layout_height="wrap_content"
        android:layout_width="match_parent">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="Share: Decide which job to take"
            android:textColor="#ffffff"
            android:textSize = "22sp"
            android:gravity = "center" />

    </android.support.v7.widget.Toolbar>

    <TextView
        android:id="@+id/dh_share_tv_selectwho"
        android:text="@string/dh_share_select_who"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:textSize="19sp"
        android:layout_weight="0.23" />

    <TextView
        android:id="@+id/dh_share_tv_dhfriends"
        android:text="@string/dh_share_myfriends"
        android:layout_width="match_parent"
        android:gravity="center"
        android:textSize="17sp"
        android:layout_height="wrap_content" />

    <RadioButton
        android:text="@string/dh_friend_1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/radioButton4"
        android:layout_weight="0.00" />

    <RadioButton
        android:text="@string/dh_friend_2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/radioButton5"
        android:layout_marginBottom="100dp"/>

    <TextView
        android:id="@+id/dh_share_tv_friendsinvite"
        android:text="@string/dh_share_nofriends"
        android:layout_width="300dp"
        android:layout_gravity="center_horizontal"
        android:gravity="center"
        android:textSize="17sp"
        android:layout_height="wrap_content" />

    <Button
        android:id="@+id/dh_share_choose_receiver_btn_invite"
        android:text="@string/dh_invite"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:onClick="dh_share_choose_receiver_btn_inviteOnClick"/>


    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center"
        android:layout_marginTop="40dp">
        <Button
            android:id="@+id/dh_share_choose_receiver_btn_back"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/btn_back"
            android:layout_gravity="center_horizontal"
            android:onClick="dh_share_choose_receiver_btn_backOnClick"/>

        <Button
            android:id="@+id/dh_share_choose_receiver_btn_next"
            android:text="@string/dh_next"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="100dp"
            android:onClick="dh_share_choose_receiver_btn_nextOnClick"/>
    </LinearLayout>
</LinearLayout>