<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <android.support.v7.widget.Toolbar
        android:id="@+id/dh_share_choose_factor_ab"
        android:background="?attr/colorPrimary"
        android:layout_height="wrap_content"
        android:layout_width="match_parent">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/dh_decision"
            android:textColor="@color/colorWhite"
            android:textSize = "26sp"
            android:gravity = "center" />

    </android.support.v7.widget.Toolbar>

    <TextView
        android:text="@string/dh_select"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:textSize="19sp"
        android:id="@+id/textView3"
        android:layout_weight="0.07" />

    <RadioButton
        android:text="@string/dh_select_all_factors"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/radioButton"
        android:layout_weight="0.07" />

    <RadioButton
        android:text="@string/dh_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/radioButton2"
        android:layout_weight="0.07" />

    <RadioButton
        android:text="@string/dh_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/radioButton3"
        android:layout_weight="0.07" />

    <Button
        android:text="@string/dh_next"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/button" />
</LinearLayout>