<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginRight="16dp"
    android:layout_marginLeft="16dp">

    <TextView
        android:id="@+id/h_homepage_tv_titlebar"
        android:text="@string/h_homepage_titlebartext"
        style="@style/TitleBarText"
         />

    <Button
        android:id="@+id/h_homepage_btn_DHfaq"
        android:text="@string/h_homepage_btn_DHfaqtext"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="20sp"
        android:layout_marginTop="64dp"/>

    <Button
        android:id="@+id/h_homepage_btn_PQfaq"
        android:text="@string/h_homepage_btn_PQfaqtext"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="20sp"
        android:layout_marginTop="64dp"/>

</LinearLayout>