<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:weightSum="1">

    <android.support.v7.widget.Toolbar
        android:id="@+id/dh_homepage_ab"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:background="@color/colorPrimary" />

    <TextView
        style="@style/TitleBarText"
        android:text="@string/dh_homepage_titlebar" />

    <Button
        android:id="@+id/dh_homepage_btn_newdecision"
        android:text="@string/dh_homepage_btn_newdecisiontext"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="20sp"
        android:onClick="dh_homepage_btn_newdecisionOnClick"/>

    <TextView
        android:id="@+id/dh_homepage_tv_mydecisions"
        android:text="@string/dh_homepage_tv_mydecisionstext"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="20sp" />

    <Button
        android:text="@string/dh_dummy_decision"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="16sp"/>

    <Button
        android:text="@string/dh_dummy_decision"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="16sp"/>

    <Button
        android:text="@string/dh_dummy_decision"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="16sp"/>

    <TextView
        android:id="@+id/dh_homepage_tv_sharedwithme"
        android:text="@string/dh_homepage_tv_sharedwithme"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="20sp" />

    <Button
        android:text="@string/dh_dummy_decision"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="16sp"/>

    <Button
        android:text="@string/dh_dummy_decision"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="16sp" />

    <Button
        android:text="@string/dh_dummy_decision"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="16sp" />

</LinearLayout>