<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginRight="16dp"
    android:layout_marginLeft="16dp">

    <TextView
        android:id="@+id/login_welcome_tv_welcome"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/login_welcome_tv_welcometext"
        android:textColor="?attr/colorPrimary"
        android:gravity="center"
        android:textStyle="bold"
        android:textSize="40sp"
        android:layout_marginTop="20dp"
        />

    <Button
        android:id = "@+id/login_welcome_btn_login"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="#F8F8FF"
        android:background="#FFD700"
        android:text="@string/login_welcome_btn_logintext"
        android:layout_marginTop="40dp"
        android:layout_marginRight="16dp"
        android:layout_marginLeft="16dp"
        android:textSize="40sp"
        android:onClick="login_welcome_btn_loginOnClick"/>

    <Button
        android:id = "@+id/login_welcome_btn_signup"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/login_welcome_btn_signuptext"
        android:textColor="#F8F8FF"
        android:background="?attr/colorPrimary"
        android:layout_marginTop="20dp"
        android:layout_marginRight="16dp"
        android:layout_marginLeft="16dp"
        android:textSize="40sp"
        android:onClick="login_welcome_btn_signupOnClick"
        />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/welcome_detail_text"
        android:gravity="center"
        android:textStyle="bold"
        android:textSize="20sp"
        android:layout_marginTop="32dp"
        android:layout_marginRight="16dp"
        android:layout_marginLeft="16dp"
        />
</LinearLayout>