<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">
    <android.support.v7.widget.Toolbar
        android:id="@+id/dh_share_review_ab"
        android:background="?attr/colorPrimary"
        android:layout_height="wrap_content"
        android:layout_width="match_parent">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="Share: Decide which job to take"
            android:textColor="@color/colorWhite"
            android:textSize="22sp"
            android:gravity="center"/>

    </android.support.v7.widget.Toolbar>

    <TextView
        android:text="@string/dh_share_review"
        android:layout_width="match_parent"
        android:textSize="19sp"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="30dp"
        android:id="@+id/textView6" />

    <TextView
        android:id="@+id/dh_share_reviews_tv_to"
        android:text="@string/dh_share_review_to"
        android:textSize="20sp"
        android:layout_gravity="center"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="@color/colorPrimaryDark"/>

    <TextView
        android:id="@+id/dh_share_reviews_tv_towho"
        android:text="Friend 1, Friend 2..."
        android:textSize="20sp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="30dp"/>

    <TextView
        android:id="@+id/dh_share_review_tv_what"
        android:text="@string/dh_share_review_what"
        android:textSize="20sp"
        android:textColor="@color/colorPrimaryDark"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />


    <TextView
        android:text="Decision: Decide which job to take"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="20sp"
        android:id="@+id/textView9"
        android:layout_marginBottom="30dp"/>

    <Button
        android:id="@+id/dh_share_reviews_btn_send"
        android:text="@string/dh_send"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:onClick="dh_share_reviews_btn_sendOnClick"/>


    <Button
        android:id="@+id/dh_share_reviews_btn_cancel"
        android:text="@string/btn_cancel"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:onClick="dh_share_reviews_btn_cancelOnClick"/>

</LinearLayout>