<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:weightSum="1">

    <EditText
        android:id="@+id/login_login_et_username"
        android:text="@string/login_login_et_usernametext"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:layout_marginLeft="100dp"
        android:layout_marginTop="150dp"
        android:ems="20" />

    <EditText
        android:id="@+id/login_login_et_password"
        android:text = "@string/login_login_et_passwordtext"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textPassword"
        android:layout_marginLeft="100dp"
        android:ems="20"
        />

    <Button
        android:id="@+id/login_login_btn_login"
        android:text="@string/login_login_btn_logintext"
        android:textSize = "30dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="50dp"
        android:layout_marginRight = "50dp"
        android:textColor="#F8F8FF"
        android:background="#FFD700"
        android:layout_weight="0.05"
        android:onClick="login_login_btn_loginOnClick"/>
</LinearLayout>