<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/login_signupconfirmation_tv_result1"
        android:text="@string/login_signupconfirmation_tv_result_successtext1"
        android:layout_marginLeft="50dp"
        android:layout_marginTop="180dp"
        android:textSize ="20dp"
        android:textColor = "?attr/colorPrimary"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        />

    <TextView
        android:id="@+id/login_signupconfirmation_tv_result2"
        android:text="@string/login_signupconfirmation_tv_result_successtext2"
        android:layout_marginTop="10dp"
        android:layout_marginLeft="30dp"
        android:textColor = "?attr/colorPrimary"
        android:textSize = "20dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        />

    <Button
        android:id="@+id/login_signupconfirmation_btn_back"
        android:text="@string/login_signupconfirmation_btn_backtext"
        android:textColor="#F8F8FF"
        android:textSize = "25dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="60dp"
        android:layout_marginRight= "60dp"
        android:layout_marginTop="20dp"
        android:background="?attr/colorPrimary"
        android:onClick="login_signupconfirmation_btn_backOnClick"/>
</LinearLayout>